# Axis6

./: .gitignore  README.md  a.out  make.sh  test.cc  testGetRot.cc  test_trans.py
include/: RoboSim.hpp
src/: RoboSim.cc
src/axis6/: CMakeLists.txt  package.xml
src/axis6/apps/: gazebo_sim.cc  robot_sim.cc
src/axis6/config/: axis6_control.yaml
src/axis6/include/: RoboSim.hpp  keyCtrl.hpp
src/axis6/launch/: axis6_gazebo.launch  control.launch  gazebo_sim.launch  robot.rviz  robot_sim.launch
src/axis6/script/: inertial_calculator.py
src/axis6/src/: RoboSim.cc  keyCtrl.cc
src/axis6/urdf/: axis6.gazebo  axis6.sdf  axis6.xacro
src/axis6/worlds/: axis6.world
